Settings labels vertical alignment fix

--- a/nailgun/static/css/styles.less
+++ b/nailgun/static/css/styles.less
@@ -2358,7 +2358,7 @@ input.error:focus {
     .parameter-name {
       display: table-cell;
       vertical-align: top;
-      padding: 3px 10px 0 12px;
+      padding: 9px 10px 0 12px;
       max-width: 180px;
       float: none;
     }
@@ -2373,9 +2373,9 @@ input.error:focus {
       }
     }
     .parameter-description {
-      display: table-cell;
+      display: table-cell !important;
       vertical-align: top;
-      padding-top: 3px;
+      padding-top: 6px;
       max-width: 550px;
       float: none;
     }
